Only allow redirects to the same server in `POST /redirect/get`